test_scripts/semantic_errors/mixed_type_test.sp
string result1 = "foo" + 1;
int result2 = 5 + "bar";
string result3 = "hello" + "world";
int result4 = 10 + 20;
